RESOLVED FIXED196954
Web Inspector: CRASH when reopening tab with docked inspector on crashed page
https://bugs.webkit.org/show_bug.cgi?id=196954
Summary Web Inspector: CRASH when reopening tab with docked inspector on crashed page
Joseph Pecoraro
Reported 2019-04-15 20:33:58 PDT
CRASH when reopening tab with docked inspector on crashed page Steps to Reproduce: 1. Open Safari window 2. Open a Tab to example.com 3. Inspect example.com 4. Dock inspector 5. Open and focus a second tab 6. Kill the example.com web process 7. Switch back to the example.com tab => UIProcess crashes Crash: ... Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x0000000109d7f086 WebKit::WebPageProxy::pageClient() const + 4 (DumbPtrTraits.h:41) 1 com.apple.WebKit 0x0000000109e2d457 WebKit::WebInspectorProxy::inspectedViewFrameDidChange(double) + 55 (WebPageProxyMac.mm:655) 2 com.apple.WebKit 0x0000000109e1c629 -[WKInspectorWKWebView viewDidMoveToWindow] + 80 (WKInspectorWKWebView.mm:73) ...
Attachments
[PATCH] Proposed Fix (1.23 KB, patch)
2019-04-15 20:34 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2019-04-15 20:34:06 PDT
Joseph Pecoraro
Comment 2 2019-04-15 20:34:58 PDT
Created attachment 367493 [details] [PATCH] Proposed Fix
Ryosuke Niwa
Comment 3 2019-04-15 22:56:00 PDT
Comment on attachment 367493 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=367493&action=review > Source/WebKit/ChangeLog:3 > + Web Inspector: CRASH when reopening tab with docked inspector on crashed page Is there anyway to write a test for this?
WebKit Commit Bot
Comment 4 2019-04-15 23:22:46 PDT
Comment on attachment 367493 [details] [PATCH] Proposed Fix Clearing flags on attachment: 367493 Committed r244326: <https://trac.webkit.org/changeset/244326>
WebKit Commit Bot
Comment 5 2019-04-15 23:22:48 PDT
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 6 2019-04-16 11:28:35 PDT
(In reply to Ryosuke Niwa from comment #3) > Comment on attachment 367493 [details] > [PATCH] Proposed Fix > > View in context: > https://bugs.webkit.org/attachment.cgi?id=367493&action=review > > > Source/WebKit/ChangeLog:3 > > + Web Inspector: CRASH when reopening tab with docked inspector on crashed page > > Is there anyway to write a test for this? Hmm, this relied on Safari changing tabs to trigger the -[WKInspectorWKWebView viewDidMoveToWindow]. There might be an API test I could come up with using WKWebViews in NSWindows.
Note You need to log in before you can comment on or make changes to this bug.