Web Inspector: CRASH when reopening tab with docked inspector on crashed page https://bugs.webkit.org/show_bug.cgi?id=196954 <rdar://problem/48716433>

Reviewed by Ryosuke Niwa.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::inspectedViewFrameDidChange):


Canonical link: https://commits.webkit.org/211225@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244326 268f45cc-cd09-0410-ab3c-d52691b4dbfc